updated the README to include the location I got the color palettes used. updated html to include an additional canvas and correct spelling. updated css to add a slight shadow behind the pictures. updated js with a new charge and a for loop to push the times the image was shown into an array

--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,45 @@
+* {
+  box-sizing: border-box;
+}
 h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 3em;
   text-align: center;
+  margin: 20px;
 }
 
 h2 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5em;
   text-align: center;
-}
-
-img {
-  width: 300px;
-  margin: 30px;
+  margin-bottom: 20px;
 }
 
 section {
-margin: auto;
-  width: 100%;
+margin: 0 auto;
+  width: 960px;
 }
 
-#selections {
+img {
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+  margin: 30px;
+  width:25%;
+}
+
+/* #selections {
   font-family: 'Times New Roman', Times, serif;
   font-size: .8em;
   line-height: 1em;
   margin: 20px;
+} */
+section.canvas {
+  width: 100%;
+  margin: auto;
 }
 
 canvas {
   height: 400px;
   width: 600px;
+  border: 3px solid black;
 }
 
